[plugin-web-app] Optimize execution of actions in native context